--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* ///// CSS valable quelque soit le support ///// */
+/* // CSS valable quelque soit le support // */
 
 /* -- Général -- */
 
@@ -324,7 +324,7 @@ footer li{
 
 
 
-/* ///// MEDIA QUERIES ///// */
+/* // MEDIA QUERIES // */
 
 
 @media screen and (max-width: 768px){
@@ -533,7 +533,7 @@ footer li{
         flex-direction: column;
         align-items: stretch;
         width: 100.5%;
-        height: 100;
+        height: 100%;
         margin: 0;
     }
 
