--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ form{
     height: 2.9rem;
 }
 .form .fa{
-font-size: 1.125rem;
+    font-size: 1.125rem;
 }
 .form__ico{
     width: 3.25rem;
@@ -78,12 +78,17 @@ font-size: 1.125rem;
     text-align: center;
     padding-top: 0.92rem;
 }
-.form__field{
-    font-size: 0.8rem;
-    font-weight: bold;
-    padding-left: 1.1rem;
+.p__field{
+    height: 2.8rem;
     border: 1px solid #F2F2F2;
     border-right: none;
+}
+.form__field{
+    height: 2.8rem;
+    font-size: 0.8rem;
+    font-weight: bold;
+    border: none;
+    padding-left: 1.1rem;
     width: 100%;
 }
 .form__field:focus{
@@ -109,7 +114,7 @@ font-size: 1.125rem;
     margin-bottom: 0;
 }
 .filtre-ico{
-    padding: 0.5rem 0.3rem 0.5rem 0.3rem;
+    padding: 0.45rem 0.3rem 0.55rem 0.3rem;
     margin: 0 0.7rem 0 -0.1rem;
     background-color: #deebff;
     border: 4px solid #deebff;
@@ -306,19 +311,12 @@ footer li{
     .form__field{
         padding-right: 3rem;
     }
-    .p__btn{
-        border: 1px solid #F2F2F2;
-        border-left: none;
-        border-right: none;
-        border-radius: 0 1rem 1rem 0;
-        height: 2.77rem;
-        margin-left: -0.9rem;
-    }
     .form__btn{
         width: 2.9rem;
         height: 2.89rem;
         border-radius: 1rem;
-        margin-top: -1px;
+        margin-top: 0px;
+        margin-left: -1.9rem;
     }
     #textsearch{
         display: none;
